# adversarial_games

./: AGENTS.md  CLAUDE.md  TODO.md  dqn_tiktaktoe.pth  main.py  pyproject.toml  q_table.pkl  q_table_episodes_10000_epsilon_0.2.pkl  q_table_episodes_1000_epsilon_0.2.pkl  readme.txt  requirements.txt
src/: agent.py  agents.py  dqn_model.py  dqn_training.py  environment.py  main.py  minimax.py  q_learning_training.py  util.py
src/algorithms/: minimax.py
src/connectfour/: agent.py  dqn_training.py  environment.py  evaluate.py  game.py  minimax.py  model.py  q_learning_training.py
src/environments/: tiktaktoe.py
src/experiments/: minimax_unlimited_connectfour.py
src/tictactoe/: agent.py  dqn_training.py  environment.py  evaluate.py  game.py  minimax.py  model.py  q_learning_training.py
src/tiktaktoe/: agent.py  dqn_training.py  environment.py  evaluate.py  game.py  minimax.py  q_learning_training.py
weights/: connectfour_dqn.pth  connectfour_dqn_v2.pth  tictactoe_dqn.pth  tictactoe_dqn_v2.pth  tictactoe_ql.pkl  tiktaktoe_dqn.pth  tiktaktoe_ql.pkl
